# random-dna-generator-rs

./: Cargo.toml
src/: README.md  main.rs
