[package]
name = "random_dna_generator_rs"
version = "0.1.0"
edition = "2021"
license = "BSD-2-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8.5", features = ["small_rng"] }
clap = {version = "4.1.8", features = ["derive"]}